migrated app to support i18n properties